# hr-department-database

./: index.html  src_pages_AuthorizationPage_ui_AuthorizationPage_tsx.3e0ae03c7fdff8192ce6.js  src_pages_NotFoundPage_ui_NotFoundPage_tsx.b028da6d1acfc31898d8.js  src_pages_WelcomePage_ui_WelcomePage_tsx.0a50c9fe4ee412305703.js  src_pages_WelcomePage_ui_WelcomePage_tsx.14750d6f8d8342080bf3.js  src_pages_WelcomePage_ui_WelcomePage_tsx.5d0fd84ee4dd5372b67c.js  src_pages_WelcomePage_ui_WelcomePage_tsx.e1810b2c8982a42ccb4c.js  src_pages_WelcomePage_ui_WelcomePage_tsx.edc6215f6bc1583193f5.js  vendors-node_modules_framer-motion_dist_es_render_components_motion_proxy_mjs.fa42e61b3859e38d4586.js
backend/: CMakeLists.txt  build.sh
backend/src/: application.h  connection_pool.h  request_handler.h  resp_maker.h
backend/src/api/: api_handler.cpp  api_handler.h
backend/src/app/: use_cases.h  use_cases_impl.cpp  use_cases_impl.h
backend/src/domain/: department.h  employee.h  payroll_sheet.h  payroll_sheet_fwd.h  personnel_event.h  personnel_event_fwd.h  staffing_table.h  time_sheet.h  vacation.h  worker.h
backend/src/postgres/: postgres.cpp  postgres.h
backend/src/ui/: view.h
frontend/: package-lock.json  package.json  tsconfig.json
frontend/config/babel/: babelRemoveDataPropsPlugin.ts
frontend/public/: index.html
frontend/src/: index.tsx
frontend/src/app/: App.tsx
frontend/src/app/styles/: index.css
frontend/src/entities/department/: index.ts
frontend/src/entities/employee/: index.ts
frontend/src/entities/orders/: index.ts
frontend/src/entities/staffing/: index.ts
frontend/src/entities/time-sheet/: index.ts
frontend/src/entities/trips/: index.ts
frontend/src/entities/user/: index.ts
frontend/src/entities/vacations/: index.ts
(+187 files in other folders)
